Feat (Budget mutattions): Adds mutations for budgets and add tests. Changes tests to run in order to fix issue with them running in parallel.